chore(test): Additional --add-opens statements